@@ -1,5 +1,5 @@
 Package: neubot
-Version: 0.4.2-rc2-1
+Version: 0.4.2-rc3-1
 Architecture: all
 Maintainer: Simone Basso <bassosimone@gmail.com>
 Installed-Size: @SIZE@
